--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 #Github.com-Vasusen-code
 
-https://github.com/vasusen-code/Telethon/archive/refs/tags/v1.24.0.zip
-https://github.com/vasusen-code/ethon/archive/refs/tags/v0.1.4.zip
+telethon
+ethon
 cryptg
 tgcrypto
 pyrogram
